<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dim_320"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_26"
        android:layout_marginTop="@dimen/dim_16"
        android:layout_marginEnd="@dimen/dim_26"
        android:layout_marginBottom="@dimen/dim_20"
        android:background="#7E501F"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:padding="@dimen/dim_7"
        android:shadowColor="#000"
        android:text="@string/AddContact"
        android:textColor="#fff"
        android:textSize="@dimen/font_size_20" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameOfContact"
        android:layout_marginStart="@dimen/dim_26"
        android:layout_marginEnd="@dimen/dim_26"
        android:layout_marginBottom="@dimen/dim_14"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactNameADDCON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contactNumber"
        android:layout_marginStart="@dimen/dim_26"
        android:layout_marginEnd="@dimen/dim_26"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactNumberADDCON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/dim_10">
        <Button
            android:id="@+id/cancelButtonDialog"
            android:layout_width="@dimen/dim_100"
            android:layout_height="@dimen/dim_50"
            android:layout_marginTop="@dimen/dim_5"
            android:layout_marginEnd="@dimen/dim_20"
            android:backgroundTint="#7E501F"
            android:text="@string/Cancel"
            android:textSize="@dimen/font_size_11"
            />
        <Button
            android:id="@+id/okButtonDialog"
            android:layout_width="@dimen/dim_100"
            android:layout_height="@dimen/dim_50"
            android:layout_marginTop="@dimen/dim_5"
            android:layout_marginStart="@dimen/dim_20"
            android:backgroundTint="#7E501F"
            android:text="@string/Ok"
            android:textSize="@dimen/font_size_11"
            />

    </LinearLayout>

</LinearLayout>